tests/NormalTests/paczka1/fuzzy1/19255144.err
Error in line 5: 5NWgarvrV S753 88,02
Error in line 4: oPStCUXGzd S199 13,2
Error in line 7: 5NWgarvrV S753 24,2
Error in line 11: 5NWgarvrV S551 87,5
Error in line 9: S199 S753 14,9
Error in line 6: oPStCUXGzd S753 70,0
Error in line 12: 5NWgarvrV S101 39,5
Error in line 24: S199 S551 18,8
Error in line 31: 2B7tCymAf S753 53,8
Error in line 37: S199 S753 47,3
Error in line 38: S199 S199 86,7
